--- a/.env.example
+++ b/.env.example
@@ -1,12 +1,12 @@
 # vLLM (model server)
-VLLM_IMAGE_TAG=latest
+VLLM_IMAGE_TAG=22.04
 VLLM_PORT=8000
 VLLM_MODEL=rednote-hilab/dots.ocr
 VLLM_SERVED_MODEL_NAME=dotsOCR
 VLLM_TENSOR_PARALLEL_SIZE=1
 VLLM_GPU_MEMORY_UTILIZATION=0.89
 VLLM_MAX_MODEL_LEN=12000
-VLLM_SHM_SIZE=4gb
+VLLM_SHM_SIZE=16gb
 
 # HuggingFace
 # Create a local .env (NOT committed) and set your token there.
