--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,12 +7,10 @@ requires-python = "==3.13.*"
 
 
 dependencies = [
-    "fastapi>=0.129.0",
-    "httpx>=0.27.0",
     "openai>=1.5.0",
     "pillow>=10.4.0",
     "pymupdf>=1.24.0",
-    "pyyaml>=6.0.2",
+    "pydantic-settings",
     "streamlit>=1.41.0",
 ]
 
